# signal-processing-project

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  coverage.xml  pyproject.toml
.github/workflows/: codecov.yml
documentation/: Implementation_document.md  learning.ipynb  project_specification.ipynb  project_specification.md  requirements.ipynb  testing_document.ipynb  testing_document.md  user_guide.ipynb  user_guide.md
documentation/reports/: week1_report.ipynb  week3_report.ipynb  week4_report.ipynb  week6_report.ipynb
documentation/week_reports/: week2_report.ipynb
main/: Fourier.py  data_processing.py  main.py  noise_reduction.py  transforms.py  visualisations.py
main/tests/: performance_test.py  test_transforms.py
reports/: week1_report.md  week2_report.ipynb  week3_report.ipynb  week4_report.ipynb  week5_report.ipynb  week6_report.ipynb
src/: main.py  performance_test.py
src/Data/: sources.ipynb  test_soundwave.m4a
src/performance_tests/: performance_test.py
src/services/: audio_file_wave.py  data_processing.py  file_processing.py  noise_reduction.py  sample.py  sample_wave.py  transform_alternations.py  transformalternations.py  transforms.py
src/tests/: performance_test.py  test_data_processing.py  test_main.py
src/tests/services/: test_data_processing.py  test_sample_wave.py  test_transform_alternations.py  test_transforms.py
src/tests/ui/: test_main.py
src/ui/: alterations.py  flags.py  main.py  visualisations.py
